[metadata]
name = laroux
version = 0.0.1
author = William Ellison
author_email = waellison@gmail.com
description = A small, simple LRU cache
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/waellison/laroux
project_urls =
    Bug Tracker = https://github.com/waellison/laroux/issues
    Maintainer's Blog = https://waellison.blog
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: GNU Affero General Public License v3
    Environment :: Plugins
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
